--- a/week1/sign-up-homework.html
+++ b/week1/sign-up-homework.html
@@ -71,7 +71,7 @@
                    <input type="text" required placeholder="enter zip code" pattern="^[0-9]{5}" />
                 </li>
                 <li>
-                  <label for="phone-number">Telephone Number:</label><input type="number" name="phone-number" id="phone-number" placeholder="enter phone number" required />
+                  <label for="tel">Telephone Number:</label><input type="tel" required placeholder="000-000-0000" />
                 </li>
                 <li>
                   <label>Pick up Day</label>
